lots of django notes on api from cert6

--- a/cert5/demoproject/django_projects/chefsTable/myfirstapp/templates/partials/home.html
+++ b/cert5/demoproject/django_projects/chefsTable/myfirstapp/templates/partials/home.html
@@ -1,5 +1,7 @@
 <p>Hello</p>
 
+{% include 'partials/_header.html' %}
+
 <form action = "" method = "post">
     {% csrf_token %}
     {{form.as_p}}
