--- a/cert5/demoproject/django_projects/chefsTable/myfirstapp/templates/partials/location.html
+++ b/cert5/demoproject/django_projects/chefsTable/myfirstapp/templates/partials/location.html
@@ -4,6 +4,7 @@
         <title>Location page</title>
     </head>
     <body>
+        {% include 'partials/_header.html' %}
         <h1>Our Location!</h1>
         <h2>Falafel</h2>
         <p>Chickpea, herbs and spices</p>
