--- a/cert5/demoproject/django_projects/chefsTable/myfirstapp/templates/partials/menu.html
+++ b/cert5/demoproject/django_projects/chefsTable/myfirstapp/templates/partials/menu.html
@@ -1,4 +1,5 @@
 <table stlye="border:1px solid black;">
+    {% include 'partials/_header.html' %}
     {% for item in main_course %}
     <tr>
         <td style="border:1px solid black;">{{item.name}}</td>
