--- a/capstone_project/restaurant_website/restaurantapi_app/templates/menu_item.html
+++ b/capstone_project/restaurant_website/restaurantapi_app/templates/menu_item.html
@@ -26,8 +26,10 @@
          <!--End col-->
          <!--Begin col-->
          <div class="column">
-            <img src="restaurantapi_app/static/img/menu_items/{{menu_item.name}}.jpg" alt="{{menu_item.name}}" />
-            <!--<img src="{% static 'restaurantapi_app/static/img/{{menu_item.name}}.jpg' %}" alt = "{{menu_item.name}}" /> -->
+            <img src="restaurantapi_app/static/img/{{menu_item.name}}.jpg" alt="{{menu_item.name}}" />
+            <!--<img src="{% static 'restaurantapi_app/{{menu_item.name}}.jpg' %}" alt = "{{menu_item.name}}" /> -->
+            <!--<img src="{{settings.STATIC_URL }}restaurantapi_app/{{ menu_item.name }}.jpg" alt="{{ menu_item.name }}" />-->
+
         </div>
          <!--End col-->
       </div>
